# agent-do

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  INTEGRATION.md  LICENSE  PLAN.md  README.md  SECURITY.md  SPEC_TOOL.md  TOOL_AUDIT.md  agent-do  context7  install.sh  registry.yaml  requirements.txt  test.sh
hooks/: agent-do-pretooluse-check.py  agent-do-pretooluse-codex.py  agent-do-prompt-router.py  agent-do-session-start.sh
lib/: __init__.py  ai_router.py  cache.py  creds-helper.sh  email_query.py  email_send.py  json-output.sh  live.sh  notify.py  registry.py  retry.sh  snapshot.sh  state.py  telemetry.py
tests/: test_auth.py  test_auth_adapters.py  test_auth_advance.py  test_auth_email_challenge.py  test_auth_interactive.py  test_auth_live_browser.py  test_auth_passkey.py  test_auth_phone_challenge.py  test_auth_probe.py  test_auth_provider_refresh.py  test_browse_session_defaults.py  test_browser_import.py  test_coord.py  test_creds.py  test_dispatch.py  test_email.py  test_gh.py  test_global_hooks_nonblocking.py  test_hardware.py  test_harness.py  test_live.py  test_meetings.py  test_notify.py  test_prompt_hook_ai.py  test_render.py  test_resend.py  test_sms.py  test_spec.py  test_suggest_ai.py  test_tool_regressions.py  test_v11_routing.py
tools/agent-manna/: Cargo.toml  DESIGN.md  README.md  SCHEMA.md  agent-manna
tools/agent-manna/.manna/: issues.jsonl
tools/agent-manna/src/: context.rs  error.rs  id.rs  issue.rs  lib.rs  main.rs  store.rs
tools/agent-manna/test/: integration.sh
(+279 files in other folders)
