[package]
name = "manna-core"
version = "0.1.0"
edition = "2021"
description = "Git-backed issue tracking for AI agent workflows"
license = "MIT"
repository = "https://github.com/ovachiever/agent-do"
authors = ["Erik <erik@ovachiever.com>"]

[[bin]]
name = "manna-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
fs2 = "0.4"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
